# CredSpy

./: .gitignore  LICENSE  README.md  credspy.py  pyproject.toml
examples/: emails.txt
